# arcs_cohort_gazebo_sim

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: gazebo_bridge.yaml  gazebo_joystick_teleop.yaml  gazebo_ros2_control_params.yaml  gazebo_ros2_control_params.yaml.template  ros2_control_params.yaml
control/: gazebo_diff_drive_plugin.xacro  gazebo_ros2_control_plugin.xacro
description/: lidar.gazebo.xacro  robot.gazebo.xacro  vectornav_imu.gazebo.xacro  zed_camera.gazebo.xacro
launch/: gazabo_sim.launch.py  gazebo_sim.launch.py
worlds/: empty.world  lunar_terrain.world  test_blender_world.world  test_obstacles_world_1.world
worlds/assets/models/: TerrainTest.sdf
